--- a/README.adoc
+++ b/README.adoc
@@ -4,10 +4,24 @@
 
 == Background and Introduction
 
-Despite that there are criticisms to use JSON as system configuration information's format<<cr>>, JSON still has its beauty such as rich tool supports, good balance between machine's and human's readability and writability, clarity and simplicity in syntax, etc.
+Despite that there are criticisms to use JSON<<json>> as system configuration information's format<<cr>>, JSON still has its beauty such as rich tool supports, good balance between machine's and human's readability and writability, clarity and simplicity in syntax, etc.
 
 However, surely it has some weaknesses when we try to define data structure.
-For instance, under a situation, where we need to generate similar but slightly different system configurations repeatedly, it is quite difficult to remove redundant pieces since JSON itself does not define anything about relationships between files or nodes inside files.footnote:[This is not merely a weakness of JSON but all so other notations even YAML. YAML has a way to reference another object node from one, still it cannot embed a string value of a text node in another by itself.]
+For instance, under a situation, where we need to generate similar but slightly different system configurations repeatedly, it is quite difficult to remove redundant pieces since JSON itself does not define anything about relationships between files or nodes inside files.footnote:[This is not merely a weakness of JSON but also other notations even YAML. YAML has a way to reference another object node from one, still it cannot embed a string value of a text node in another by itself.]
+
+`powerjson` is a tool to cope with such challenges by introducing inheritance and templating into JSON files.
+
+== Installation
+
+Place the file `powerjson` somewhere on your `PATH`.
+
+== Usage
+
+[source, bash]
+----
+powerjson [-h|--help] [-e|--enable-templating] [-e|--enable-templating] TARGET
+----
+
 
 == Features
 
@@ -26,9 +40,17 @@ And usage of them will be discussed in this section.
 In this section, we introduce features of the product using following data.
 
 * link:examples/A.json[A.json]
+[source, json]
+include::examples/A.json[]
 * link:examples/AA.json[AA.json]
+[source, json]
+include::examples/AA.json[]
 * link:examples/B.json[B.json]
+[source, json]
+include::examples/B.json[]
 * link:examples/T.json[T.json]
+[source, json]
+include::examples/T.json[]
 
 === External Inheritance
 
@@ -45,7 +67,12 @@ A usage example is as follows.
 }
 ----
 
-This will be rendered into the following JSON object.
+----
+powerjson I.json
+----
+
+`I.json` will be rendered into the following JSON object with this command line.
+
 
 [source, json]
 .External Inheritance output
@@ -193,6 +220,9 @@ Following is a such an example.
 
 In this example, the version to be released next is `2.12.0`, however the version under the development for it has a suffix `-SNAPSHOT`
 
+To follow the principle of D-R-Y, how should we fix it?
+Templating is a feature to offer a solution to this challenge.
+
 We can describe this relationship by using the templating feature of `powerjson`.
 
 [source, json]
@@ -206,7 +236,51 @@ We can describe this relationship by using the templating feature of `powerjson`
 
 Once you render this file with `powerjson`, you will get the first file (Version file).
 
-`$ref` is a built-in function of `powerjson`.
+`$ref` is a built-in function of `powerjson`, which expands the value of the node specified by the path given as an argument.
+Not only built-in functions but also any commands (bash expressions) valid on a platform on which `powerjson` is running can be used here.
+
+For instance, following is a valid input to `powerjson`.
+[source, json]
+----
+{
+  "releaseVersion": "2.12.0",
+  "snapshotVersion": "$(ref .releaseVersion)-$(date \"+%Y-%m-%d\")"
+}
+----
+
+And this will result in an output below.
+[source, json]
+----
+{
+  "releaseVersion": "2.12.0",
+  "snapshotVersion": "2.12.0-2019-08-28"
+}
+----
+
+This feature can be disabled by `-d` (`--disable-templating`) option.
+And to enable it explicitly, you can use `-e` (`--enable-templating`) in case `POWERJSON_TEMPLATING_ENABLED` is set to `no`.
+
+==== Built-in `powerjson` functions
+
+===== `ref` function
+
+A function that returns a value of a node specified by an argument.
+This function can only work from inside "Work(2)" file.
+
+- parameter:
+  * `_path`: path to a node in the file "Work(2)"
+- returned value:
+  * A value of a node specified by `_path`
+
+
+===== `self` function
+
+A function that returns a path to a file "Work(2)"
+This function can only work from inside "Work(2)" file.
+
+- parameter: (none)
+- returned value:
+  * A path to "Work(2)" file.
 
 
 === Environment variables
@@ -299,14 +373,30 @@ At the end of this process, the attribute is removed and copied to the output, "
 
 If the file, "Work(1)" has `$private` attribute whose value is an object node, nodes associated with keys under the attribute are dumped under a temporary directory.
 The temporary directory is called 'private node directory'.
+The 'private node directory' and its contents are utilized by the "internal inheritance' mechanism.
 
 === Internal inheritance
 
-(t.b.d.)
+Internal inheritance mechanism is a bit more complicated than the external one.
+
+1. Create a base JSON object by the following procedure.
+    a. Scan paths of all internal nodes.
+    b. For each path, if it ends with `"$extends"`, expand the files specified by the attribute.
+    c. Assign the JSON node created in step b. to the parent of the `$extends` attribute.
+2. Overlay the JSON object created in the step. 1 with an original JSON object.
+3. Remove nodes, i.e., `$extends` and `$private` nodes from the JSON object created in the step 2.
+
+'Private node directory' is inserted before the first entry of `POWERJSON_PATH` environment variable when a file to be expanded is searched during the step 1. b.
 
 === Templating
 
-(t.b.d.)
+Templating is executed by performing `eval` on a string below.
+
+----
+echo {CONTENT OF Work(2)}
+----
+
+And this causes expansions of bash expressions inside the content of "Work(2)" and that expanded string will be printed by the `echo` command.
 
 
 === Limitations and Future Work
@@ -322,14 +412,14 @@ Probably, it is preferable to create an external tool (or independent module) to
 
 == License
 
-* See link:LICENSE[LICENSE]
+[source, text]
+----
+include::LICENSE[]
+----
 
 [bibliography]
 == References
 
 - [[[cr]]] Thayne McCombs. https://www.lucidchart.com/techblog/2018/07/16/why-json-isnt-a-good-configuration-language/[Why JSON isn’t a Good Configuration Language]: 2018.
-- [[[pp]]] Andy Hunt & Dave Thomas. The Pragmatic Programmer:
-From Journeyman to Master. Addison-Wesley. 1999.
-- [[[gof,2]]] Erich Gamma, Richard Helm, Ralph Johnson & John Vlissides. Design Patterns:
-Elements of Reusable Object-Oriented Software. Addison-Wesley. 1994.
 - [[[yaml]]] en.wikipedia.org. https://en.wikipedia.org/wiki/YAML[YAML]: 2019
+- [[[json]]] json.org. http://www.json.org/[JSON]:2019
