--- a/README.adoc
+++ b/README.adoc
@@ -24,19 +24,8 @@ Followings will be required to run `jf`
 Add a following entry to your `.bashrc` or a file sourced through it.
 
 [source, bash]
-----
-function jf() {
-  local _target=${1}
-  local _jf_path
-  docker run -i \
-    -v /:/var/lib/jf \
-    -e JF_PATH_BASE="/var/lib/jf" \
-    -e JF_PATH="${JF_PATH}" \
-    -e JF_DEBUG=${JF_DEBUG} \
-    -e JF_CWD="$(pwd)" \
-    dakusui/jf:v0.1 "${@}"
-}
-----
+include::jf_aliases[]
+
 
 
 == Usage
