Issue 23 implement validation (#24)
Issue-#23: 
* Add schemata (stript and lenient version)
* Update documentaion and Dockerfile for validation support
* Improve build.sh
* Improve test framework
* Integrate validation logic
* Fix a broken test and script.
* Fix bugs in inheritance mechanism
* Add a test for inter-private-nodal-inheritances
* Uniform test names
* Improve private node directory handling
* Compact error messages
* Fix a bug in resolving input file name
* Uniform use of 'true'/'false' and 'T'/'F' to the former returned by shared functions
* Clean up temporary file generation
* Simplify expression to list all paths in a json object
* Remove too much debug logs
* Rename abort to quit
* Separate quit and abort
* clean up variable names in _expand_internal_inheritances
* Implement plugin feature

--- a/README.adoc
+++ b/README.adoc
@@ -15,10 +15,12 @@ For instance, under a situation, where we need to generate similar but slightly 
 
 === Ubuntu
 Place the file `jf` somewhere on your `PATH`.
-Followings will be required to run `jf`
+Followings will be required by `jf`
 
 * `jq`
 * `bash`
+* `npm`
+  ** `ajv-cli`
 
 === With Docker
 Add a following entry to your `.bashrc` or a file sourced through it.
@@ -31,7 +33,7 @@ include::jf_aliases[]
 == Usage
 
 ```sh
-jf [-h|--help] [-e|--enable-templating] [-d|--disable-templating] [TARGET]
+jf [-h|--help] [-e|--enable-templating] [-d|--disable-templating] [--validation=no|strict|lenient] [TARGET]
 ```
 
 === Example
@@ -443,9 +445,9 @@ And this causes expansions of bash expressions inside the content of "Work(2)" a
 
 === Limitations and Future Work
 
-* Currently, almost no validation is performed by `jf`.
+* Currently, almost no validation is performed by `jf`. (https://github.com/dakusui/jf/issues/23[Issue-23])
 Probably, it is preferable to create an external tool (or independent module) to validate an input JSON file.
-* Cyclic inheritance is not checked and such a model will result in a stack-overflow.
+* Cyclic dependencies are not checked and such a model will result in a stack-overflow.
 * Handling of characters that need escaping on templating is naive.
 
 == Authors
