Issue 12 restructure documentation (#32)
* Restructure document directory
* Make readme a markdown file
* Make README.md rendered automatically from res/README.md.
* Introduce a mechanism to make resource processing order stable.
* Rename a file to make processing order stable.
* Improve document generation.
* Improve README.md
* Escape dollar signs and minor update at README.md

--- a/docs/index.adoc
+++ b/docs/index.adoc
@@ -1,6 +1,8 @@
 = jq-front: JSON with inheritance and templating
 
 `jq-front` is a simple tool to give your JSON files a power of inheritance and templating.
+It was named after *Cfront*<<Cfront>>, which is an old component of C++ language and converts C++ source code into C source code.
+
 
 == Background and Introduction
 
@@ -26,7 +28,7 @@ Followings will be required by `jq-front`
 Add a following entry to your `.bashrc` or a file sourced through it.
 
 [source, bash]
-include::jq-front_aliases[]
+include::../jq-front_aliases[]
 
 
 
@@ -37,7 +39,9 @@ jq-front [-h|--help] [-e|--enable-templating] [-d|--disable-templating] [--valid
 ```
 
 === Example
-Let's prepare files from which you want to create a new JSON by extending.
+
+Let's prepare files from which you want to create a new JSON by extending them.
+
 ```sh
 $ echo '{"yourname":"Mark"}' > name.json
 $ cat name.json
@@ -452,16 +456,17 @@ And this causes expansions of bash expressions inside the content of "Work(2)" a
 
 * **Hrioshi Ukai** - *Initial work* - https://github.com/dakusui[dakusui]
 
-== link:LICENSE[License]
+== link:../LICENSE[License]
 
 [source, text]
 ----
-include::LICENSE[]
+include::../LICENSE[]
 ----
 
 [bibliography]
 == References
 
-- [[[cr]]] Thayne McCombs. https://www.lucidchart.com/techblog/2018/07/16/why-json-isnt-a-good-configuration-language/[Why JSON isn’t a Good Configuration Language]: 2018.
-- [[[yaml]]] en.wikipedia.org. https://en.wikipedia.org/wiki/YAML[YAML]: 2019
-- [[[json]]] json.org. http://www.json.org/[JSON]:2019
+- [[[Cfront, 1]]] https://en.wikipedia.org/wiki/Cfront[Cfront]: 2019
+- [[[cr, 2]]] Thayne McCombs. https://www.lucidchart.com/techblog/2018/07/16/why-json-isnt-a-good-configuration-language/[Why JSON isn’t a Good Configuration Language]: 2018.
+- [[[yaml, 3]]] en.wikipedia.org. https://en.wikipedia.org/wiki/YAML[YAML]: 2019
+- [[[json, 4]]] json.org. http://www.json.org/[JSON]:2019
